<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackingActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapx"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/maps_name"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Chronometer
                android:id="@+id/timeCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/time_val"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/distanceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/distanceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_val"
                    android:textAlignment="center"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/speedTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_speed"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/speedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_speed_val"
                    android:textAlignment="center"
                    android:textSize="34sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onStartClick"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textSize="34sp" />

            <Button
                android:id="@+id/stopBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:enabled="false"
                android:onClick="onStopClick"
                android:text="@string/stop"
                android:textAllCaps="false"
                android:textSize="34sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>